@@ -2,7 +2,7 @@
  * **************************************************-
  * ingrid-utils
  * ==================================================
- * Copyright (C) 2014 - 2022 wemove digital solutions GmbH
+ * Copyright (C) 2014 - 2023 wemove digital solutions GmbH
  * ==================================================
  * Licensed under the EUPL, Version 1.1 or – as soon they will be
  * approved by the European Commission - subsequent versions of the
@@ -34,7 +34,9 @@ import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.util.List;
 
-import junit.framework.TestCase;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Test for {@link de.ingrid.utils.IngridDocument}
@@ -46,11 +48,12 @@ import junit.framework.TestCase;
  * @author $Author: ${lastedit}
  * 
  */
-public class IngridDocumentTest extends TestCase {
+public class IngridDocumentTest {
 
     /**
      * @throws Exception
      */
+    @Test
     public void testGetValues() throws Exception {
         String aId = "aId";
         String content = "content";
@@ -60,10 +63,11 @@ public class IngridDocumentTest extends TestCase {
         document.put("foo", "bar");
         assertEquals("bar", document.get("foo"));
     }
-    
+
     /**
      * @throws Exception
      */
+    @Test
     public void testGetList() throws Exception {
         String key=new String();
         IngridDocument document = new IngridDocument("aId", "content");
@@ -88,9 +92,10 @@ public class IngridDocumentTest extends TestCase {
     /**
      * @throws Exception
      */
+    @Test
     public void testGetter() throws Exception {
-        Integer id = new Integer(Integer.MAX_VALUE);
-        Integer content = new Integer(Integer.MIN_VALUE);
+        Integer id = Integer.valueOf(Integer.MAX_VALUE);
+        Integer content = Integer.valueOf(Integer.MIN_VALUE);
         IngridDocument document = new IngridDocument(id, content);
         assertEquals(document.getId(), id);
         assertEquals(document.getContent(), content);
@@ -99,9 +104,10 @@ public class IngridDocumentTest extends TestCase {
     /**
      * @throws Exception
      */
+    @Test
     public void testSerializbaleCheck() throws Exception {
-        Integer id = new Integer(Integer.MAX_VALUE);
-        Integer content = new Integer(Integer.MIN_VALUE);
+        Integer id = Integer.valueOf(Integer.MAX_VALUE);
+        Integer content = Integer.valueOf(Integer.MIN_VALUE);
         IngridDocument document = new IngridDocument(id, content);
         try {
             document.put(new Object(), null);
@@ -122,10 +128,11 @@ public class IngridDocumentTest extends TestCase {
     /**
      * @throws Exception
      */
+    @Test
     public void testReadAndWrite() throws Exception {
         // write
-        Integer id = new Integer(Integer.MAX_VALUE);
-        Integer content = new Integer(Integer.MIN_VALUE);
+        Integer id = Integer.valueOf(Integer.MAX_VALUE);
+        Integer content = Integer.valueOf(Integer.MIN_VALUE);
         IngridDocument writeDocument = new IngridDocument(id, content);
         ByteArrayOutputStream byteArrayStream = new ByteArrayOutputStream();
         ObjectOutputStream objectOutputStream = new ObjectOutputStream(byteArrayStream);
